--- a/public/css/headerFooter.css
+++ b/public/css/headerFooter.css
@@ -45,20 +45,24 @@ header{
     position: relative;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     background: transparent;
 }
 
 .logo_block{
     margin-right: 10px;
+    width: 217px !important;
 }
 
 .logo_block a{
     margin: 0;
 }
 
+.navbar-collapse{
+    display: flex;
+}
+
 .list-menu{
-    width: 1000px;
     display: flex;
     justify-content: flex-end;
     margin-right: 10px;
@@ -168,6 +172,52 @@ header{
 
 .iq-shop-btn span{
     font-family:tahoma;
+}
+
+/* search */
+#search-box{
+    margin-left: 2.2em;
+    box-sizing: border-box;
+    position: relative;
+    top: -3px;
+}
+
+#search-text{
+    width: 0;
+    border: none;
+    border-bottom: 1px solid var(--primary-color);
+    outline: none;
+    background: none;
+    font-size: 0.9em;
+    font-family: var(--primary-font);
+    color: rgba(74, 74, 74, .6);
+    transition: all 0.25s ease-in-out;
+    margin-left: 25px;
+}
+
+#search-text::placeholder{
+    font-family: var(--primary-font);
+    letter-spacing: 0.5px;
+}
+
+#search-box:hover #search-text,
+#search-text:valid{
+    width: 190px;
+    padding: 10px 5px 2px;
+}
+
+#search-box:hover #search-btn{
+    color: var(--primary-color);
+}
+
+#search-btn{
+    border: none;
+    background: none;
+    cursor: pointer;
+    position: absolute;
+    /* left: 30px; */
+    top: 7px;
+    font-size: 0.9em;
 }
 
 
