--- a/public/css/headerFooter.css
+++ b/public/css/headerFooter.css
@@ -10,28 +10,25 @@
     }
 }
 
+/* header */
 
 header{
     width: 100%;
     transition: all 0.3s ease-out 0s;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
 }
 
 .header-scroll{
     position: fixed !important;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1000;
     margin: 0 auto;
     box-shadow: 0px 0px 30px 0px rgb(0 0 0 / 10%);
     background-color: var(--white-color);
     animation-name: slideInDown;
     animation-duration: 1.25s;
-}
-
-.main{
-    height: 1000px;
-    /* background-color: var(--light-yellow-color); */
 }
 
 .main-header {
