--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+
 
 * {
   margin: 0;
@@ -15,8 +17,9 @@
   --white-color: #ffffff;
   --white-light-color: #e6e6e6;
   --title-color: #1c2137;
-  --sub-title-color: #ffba43;
+  --sub-title-color: #ffba43; 
   --body-text: #4a4a4a;
+  --descr-text: #6c7689;
   --light-green-color: #e2f9ee;
   --light-yellow-color: #fff8ed;
   --warning-color: #ff0000;
