--- a/public/css/adminView.css
+++ b/public/css/adminView.css
@@ -558,41 +558,15 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.h-9 {
-  height: 2.25rem;
-}
-
 .h-96 {
   height: 24rem;
-}
-
-.w-9 {
-  width: 2.25rem;
-}
-
-.w-96 {
-  width: 24rem;
-}
-
-.w-4 {
-  width: 1rem;
 }
 
 .w-44 {
   width: 11rem;
 }
 
-.bg-green-50 {
+.bg-secondary-color {
   --tw-bg-opacity: 1;
-  background-color: rgb(240 253 244 / var(--tw-bg-opacity));
-}
-
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  background-color: rgb(255 186 67 / var(--tw-bg-opacity));
 }
