--- a/public/css/cartView.css
+++ b/public/css/cartView.css
@@ -642,10 +642,6 @@ video {
   z-index: 10;
 }
 
-.float-right {
-  float: right;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -773,6 +769,18 @@ video {
   margin-bottom: 0.75rem;
 }
 
+.mt-7\.5 {
+  margin-top: 1.875rem;
+}
+
+.mt-7 {
+  margin-top: 1.75rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
 .block {
   display: block;
 }
@@ -839,6 +847,10 @@ video {
 
 .h-96 {
   height: 24rem;
+}
+
+.h-36 {
+  height: 9rem;
 }
 
 .w-\[14\.2rem\] {
@@ -1051,10 +1063,6 @@ video {
   padding: 1rem;
 }
 
-.p-30 {
-  padding: 7.5rem;
-}
-
 .py-26 {
   padding-top: 6.5rem;
   padding-bottom: 6.5rem;
@@ -1110,24 +1118,14 @@ video {
   padding-right: 0.25rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-7\.5 {
-  padding-top: 1.875rem;
-  padding-bottom: 1.875rem;
-}
-
-.py-7 {
-  padding-top: 1.75rem;
-  padding-bottom: 1.75rem;
-}
-
 .py-30 {
   padding-top: 7.5rem;
   padding-bottom: 7.5rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .pt-36 {
@@ -1250,6 +1248,10 @@ video {
   font-size: 51px;
 }
 
+.text-\[38px\] {
+  font-size: 38px;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1294,12 +1296,16 @@ video {
   line-height: 1.25;
 }
 
-.tracking-wide {
-  letter-spacing: 0.025em;
+.leading-snug {
+  line-height: 1.375;
 }
 
 .tracking-wider {
   letter-spacing: 0.05em;
+}
+
+.tracking-wide {
+  letter-spacing: 0.025em;
 }
 
 .text-title-color {
@@ -1325,6 +1331,26 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-red-700 {
+  --tw-text-opacity: 1;
+  color: rgb(185 28 28 / var(--tw-text-opacity));
+}
+
+.placeholder-body-text::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(74 74 74 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-body-text:-ms-input-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(74 74 74 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-body-text::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(74 74 74 / var(--tw-placeholder-opacity));
 }
 
 .shadow {
@@ -1412,8 +1438,18 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.focus\:border:focus {
+  border-width: 1px;
+}
+
+.focus\:border-primary-color:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(59 183 126 / var(--tw-border-opacity));
+}
+
 .group:hover .group-hover\:scale-105 {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+
