--- a/public/css/tailwindCommon.css
+++ b/public/css/tailwindCommon.css
@@ -845,12 +845,12 @@ video {
   height: 46px;
 }
 
-.h-96 {
-  height: 24rem;
-}
-
 .h-36 {
   height: 9rem;
+}
+
+.h-96 {
+  height: 24rem;
 }
 
 .w-\[14\.2rem\] {
@@ -1351,6 +1351,10 @@ video {
 .placeholder-body-text::placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(74 74 74 / var(--tw-placeholder-opacity));
+}
+
+.opacity-70 {
+  opacity: 0.7;
 }
 
 .shadow {
