--- a/public/css/tailwindCommon.css
+++ b/public/css/tailwindCommon.css
@@ -781,6 +781,10 @@ video {
   margin-bottom: 1.5rem;
 }
 
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
 .block {
   display: block;
 }
@@ -849,8 +853,12 @@ video {
   height: 9rem;
 }
 
-.h-96 {
-  height: 24rem;
+.h-screen {
+  height: 100vh;
+}
+
+.h-\[1px\] {
+  height: 1px;
 }
 
 .w-\[14\.2rem\] {
@@ -903,6 +911,14 @@ video {
 
 .w-\[35\%\] {
   width: 35%;
+}
+
+.w-1\/6 {
+  width: 16.666667%;
+}
+
+.flex-1 {
+  flex: 1 1 0%;
 }
 
 .border-separate {
@@ -1043,6 +1059,16 @@ video {
   background-color: #00000006;
 }
 
+.bg-slate-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
+
+.bg-whiten-bg-color {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 255 / var(--tw-bg-opacity));
+}
+
 .bg-\[url\(\'https\:\/\/wordpress\.iqonic\.design\/foodsto\/wp-content\/themes\/foodsto\/assets\/images\/backend\/pattern-leaf-top\.png\'\)\] {
   background-image: url('https://wordpress.iqonic.design/foodsto/wp-content/themes/foodsto/assets/images/backend/pattern-leaf-top.png');
 }
@@ -1128,6 +1154,16 @@ video {
   padding-bottom: 1rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
 .pt-36 {
   padding-top: 9rem;
 }
@@ -1178,6 +1214,10 @@ video {
 
 .pt-18 {
   padding-top: 4.5rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
 }
 
 .text-left {
@@ -1250,6 +1290,14 @@ video {
 
 .text-\[38px\] {
   font-size: 38px;
+}
+
+.text-\[13px\] {
+  font-size: 13px;
+}
+
+.text-\[12px\] {
+  font-size: 12px;
 }
 
 .font-bold {
@@ -1338,6 +1386,16 @@ video {
   color: rgb(185 28 28 / var(--tw-text-opacity));
 }
 
+.text-slate-400 {
+  --tw-text-opacity: 1;
+  color: rgb(148 163 184 / var(--tw-text-opacity));
+}
+
+.text-slate-500 {
+  --tw-text-opacity: 1;
+  color: rgb(100 116 139 / var(--tw-text-opacity));
+}
+
 .placeholder-body-text::-moz-placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(74 74 74 / var(--tw-placeholder-opacity));
@@ -1355,12 +1413,6 @@ video {
 
 .opacity-70 {
   opacity: 0.7;
-}
-
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .outline-none {
@@ -1396,6 +1448,10 @@ video {
   transition-duration: 500ms;
 }
 
+.ease-linear {
+  transition-timing-function: linear;
+}
+
 .banner__nav {
   background: url(https://res.cloudinary.com/foodstocloud/image/upload/v1657201007/page_images/food-2-1-1536x344-1-4_jmqbt1.png);
   background-size: cover !important;
@@ -1404,6 +1460,24 @@ video {
 
 .shadow-product {
   box-shadow: 0px 1px 30px 0px rgb(36 38 43 / 10%);
+}
+
+.placeholder\:shadow-custom-shadow-1::-moz-placeholder {
+  --tw-shadow: 0 0 2rem 0 rgba(136,152,170,.15) !important;
+  --tw-shadow-colored: 0 0 2rem 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.placeholder\:shadow-custom-shadow-1:-ms-input-placeholder {
+  --tw-shadow: 0 0 2rem 0 rgba(136,152,170,.15) !important;
+  --tw-shadow-colored: 0 0 2rem 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.placeholder\:shadow-custom-shadow-1::placeholder {
+  --tw-shadow: 0 0 2rem 0 rgba(136,152,170,.15) !important;
+  --tw-shadow-colored: 0 0 2rem 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .hover\:border-secondary-color:hover {
@@ -1421,6 +1495,10 @@ video {
   background-color: rgb(255 186 67 / var(--tw-bg-opacity));
 }
 
+.hover\:font-semibold:hover {
+  font-weight: 600;
+}
+
 .hover\:text-primary-color:hover {
   --tw-text-opacity: 1;
   color: rgb(59 183 126 / var(--tw-text-opacity));
@@ -1436,10 +1514,9 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.hover\:shadow-md:hover {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.hover\:text-slate-800:hover {
+  --tw-text-opacity: 1;
+  color: rgb(30 41 59 / var(--tw-text-opacity));
 }
 
 .focus\:border:focus {
