--- a/public/css/tailwindCommon.css
+++ b/public/css/tailwindCommon.css
@@ -606,6 +606,11 @@ video {
   position: relative;
 }
 
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+}
+
 .left-auto {
   left: auto;
 }
@@ -638,8 +643,44 @@ video {
   right: auto;
 }
 
+.top-0 {
+  top: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.top-\[130\%\] {
+  top: 130%;
+}
+
 .z-10 {
   z-index: 10;
+}
+
+.z-0 {
+  z-index: 0;
+}
+
+.z-\[-1\] {
+  z-index: -1;
+}
+
+.z-50 {
+  z-index: 50;
+}
+
+.col-span-4 {
+  grid-column: span 4 / span 4;
+}
+
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+
+.col-span-3 {
+  grid-column: span 3 / span 3;
 }
 
 .mx-auto {
@@ -675,6 +716,11 @@ video {
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.my-16 {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
 }
 
 .mt-3 {
@@ -861,6 +907,18 @@ video {
   height: 1px;
 }
 
+.h-96 {
+  height: 24rem;
+}
+
+.h-24 {
+  height: 6rem;
+}
+
+.h-14 {
+  height: 3.5rem;
+}
+
 .w-\[14\.2rem\] {
   width: 14.2rem;
 }
@@ -917,6 +975,14 @@ video {
   width: 16.666667%;
 }
 
+.w-14 {
+  width: 3.5rem;
+}
+
+.min-w-\[12rem\] {
+  min-width: 12rem;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -925,8 +991,19 @@ video {
   border-collapse: separate;
 }
 
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .cursor-pointer {
   cursor: pointer;
+}
+
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .list-disc {
@@ -967,6 +1044,10 @@ video {
   justify-content: space-between;
 }
 
+.gap-5 {
+  gap: 1.25rem;
+}
+
 .gap-x-4 {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
@@ -996,8 +1077,17 @@ video {
        column-gap: 0.25rem;
 }
 
+.overflow-auto {
+  overflow: auto;
+}
+
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overscroll-none {
+  -ms-scroll-chaining: none;
+      overscroll-behavior: none;
 }
 
 .rounded-md {
@@ -1006,6 +1096,10 @@ video {
 
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .border {
@@ -1059,6 +1153,11 @@ video {
   background-color: #00000006;
 }
 
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .bg-slate-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
@@ -1069,12 +1168,46 @@ video {
   background-color: rgb(249 250 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#f5365c\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 54 92 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#fb6340\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 99 64 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#ffd600\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 214 0 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#11cdef\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 205 239 / var(--tw-bg-opacity));
+}
+
 .bg-\[url\(\'https\:\/\/wordpress\.iqonic\.design\/foodsto\/wp-content\/themes\/foodsto\/assets\/images\/backend\/pattern-leaf-top\.png\'\)\] {
   background-image: url('https://wordpress.iqonic.design/foodsto/wp-content/themes/foodsto/assets/images/backend/pattern-leaf-top.png');
 }
 
 .bg-\[url\(\'https\:\/\/wordpress\.iqonic\.design\/foodsto\/wp-content\/themes\/foodsto\/assets\/images\/backend\/pattern-leaf-bottom\.png\'\)\] {
   background-image: url('https://wordpress.iqonic.design/foodsto/wp-content/themes/foodsto/assets/images/backend/pattern-leaf-bottom.png');
+}
+
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.from-primary-color {
+  --tw-gradient-from: #3bb77e;
+  --tw-gradient-to: rgb(59 183 126 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-secondary-color {
+  --tw-gradient-to: #ffba43;
 }
 
 .p-7\.5 {
@@ -1087,6 +1220,18 @@ video {
 
 .p-4 {
   padding: 1rem;
+}
+
+.p-8 {
+  padding: 2rem;
+}
+
+.p-20 {
+  padding: 5rem;
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .py-26 {
@@ -1164,6 +1309,16 @@ video {
   padding-bottom: 2.5rem;
 }
 
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .pt-36 {
   padding-top: 9rem;
 }
@@ -1218,6 +1373,14 @@ video {
 
 .pr-2 {
   padding-right: 0.5rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
+.pb-5 {
+  padding-bottom: 1.25rem;
 }
 
 .text-left {
@@ -1298,6 +1461,22 @@ video {
 
 .text-\[12px\] {
   font-size: 12px;
+}
+
+.text-\[\.9rem\] {
+  font-size: .9rem;
+}
+
+.text-\[1\.2rem\] {
+  font-size: 1.2rem;
+}
+
+.text-\[1\.5rem\] {
+  font-size: 1.5rem;
+}
+
+.text-\[2rem\] {
+  font-size: 2rem;
 }
 
 .font-bold {
@@ -1415,6 +1594,12 @@ video {
   opacity: 0.7;
 }
 
+.shadow-custom-shadow-1 {
+  --tw-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  --tw-shadow-colored: 0px 8px 24px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1462,22 +1647,8 @@ video {
   box-shadow: 0px 1px 30px 0px rgb(36 38 43 / 10%);
 }
 
-.placeholder\:shadow-custom-shadow-1::-moz-placeholder {
-  --tw-shadow: 0 0 2rem 0 rgba(136,152,170,.15) !important;
-  --tw-shadow-colored: 0 0 2rem 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.placeholder\:shadow-custom-shadow-1:-ms-input-placeholder {
-  --tw-shadow: 0 0 2rem 0 rgba(136,152,170,.15) !important;
-  --tw-shadow-colored: 0 0 2rem 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.placeholder\:shadow-custom-shadow-1::placeholder {
-  --tw-shadow: 0 0 2rem 0 rgba(136,152,170,.15) !important;
-  --tw-shadow-colored: 0 0 2rem 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.hover\:cursor-pointer:hover {
+  cursor: pointer;
 }
 
 .hover\:border-secondary-color:hover {
@@ -1493,6 +1664,11 @@ video {
 .hover\:bg-secondary-color:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 186 67 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-slate-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
 
 .hover\:font-semibold:hover {
@@ -1533,4 +1709,3 @@ video {
   --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-
