--- a/public/css/tailwindCommon.css
+++ b/public/css/tailwindCommon.css
@@ -659,6 +659,10 @@ video {
   z-index: 10;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -667,16 +671,8 @@ video {
   z-index: -1;
 }
 
-.z-50 {
-  z-index: 50;
-}
-
 .col-span-4 {
   grid-column: span 4 / span 4;
-}
-
-.col-span-2 {
-  grid-column: span 2 / span 2;
 }
 
 .col-span-3 {
@@ -1085,21 +1081,12 @@ video {
   overflow: hidden;
 }
 
-.overscroll-none {
-  -ms-scroll-chaining: none;
-      overscroll-behavior: none;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
 }
 
 .rounded-full {
   border-radius: 9999px;
-}
-
-.rounded {
-  border-radius: 0.25rem;
 }
 
 .border {
@@ -1122,6 +1109,11 @@ video {
 .border-secondary-color {
   --tw-border-opacity: 1;
   border-color: rgb(255 186 67 / var(--tw-border-opacity));
+}
+
+.border-slate-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(203 213 225 / var(--tw-border-opacity));
 }
 
 .border-b-primary-color {
@@ -1222,12 +1214,12 @@ video {
   padding: 1rem;
 }
 
-.p-8 {
-  padding: 2rem;
+.p-6 {
+  padding: 1.5rem;
 }
 
-.p-20 {
-  padding: 5rem;
+.p-8 {
+  padding: 2rem;
 }
 
 .p-10 {
@@ -1375,6 +1367,10 @@ video {
   padding-right: 0.5rem;
 }
 
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
 .pb-2 {
   padding-bottom: 0.5rem;
 }
@@ -1396,7 +1392,7 @@ video {
 }
 
 .font-primary-font {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .font-great-vibes {
@@ -1473,10 +1469,6 @@ video {
 
 .text-\[1\.5rem\] {
   font-size: 1.5rem;
-}
-
-.text-\[2rem\] {
-  font-size: 2rem;
 }
 
 .font-bold {
@@ -1702,6 +1694,11 @@ video {
 .focus\:border-primary-color:focus {
   --tw-border-opacity: 1;
   border-color: rgb(59 183 126 / var(--tw-border-opacity));
+}
+
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .group:hover .group-hover\:scale-105 {
