Update primary font

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -25,15 +25,11 @@
   --light-grey: #f9faff;
 }
 
-
 /* Các biến phông chữ */
 :root {
-  --primary-font: "Roboto", sans-serif;
+  --primary-font: "Open Sans", sans-serif;
 }
 
 html {
   font-family: var(--primary-font);
 }
-
-
-
