--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 * {
   margin: 0;
 
@@ -28,7 +28,7 @@
 
 /* Các biến phông chữ */
 :root {
-  --primary-font: "Roboto", sans-serif;
+  --primary-font: "Open Sans", sans-serif;
 }
 
 html {
