--- a/public/css/tailwindCommon.css
+++ b/public/css/tailwindCommon.css
@@ -666,14 +666,6 @@ video {
   left: 0%;
 }
 
-.top-\[-0\.3em\] {
-  top: -0.3em;
-}
-
-.left-\[100\%\] {
-  left: 100%;
-}
-
 .z-10 {
   z-index: 10;
 }
@@ -712,10 +704,6 @@ video {
 
 .float-left {
   float: left;
-}
-
-.m-0 {
-  margin: 0px;
 }
 
 .mx-auto {
@@ -758,14 +746,14 @@ video {
   margin-bottom: 4rem;
 }
 
-.mx-\[-15px\] {
-  margin-left: -15px;
-  margin-right: -15px;
-}
-
 .my-\[10px\] {
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.mx-\[-15px\] {
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
 .mx-\[5px\] {
@@ -898,6 +886,18 @@ video {
   margin-left: 0.5rem;
 }
 
+.mr-auto {
+  margin-right: auto;
+}
+
+.mb-\[10px\] {
+  margin-bottom: 10px;
+}
+
+.ml-\[5px\] {
+  margin-left: 5px;
+}
+
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -914,18 +914,6 @@ video {
   margin-right: 2px;
 }
 
-.ml-\[5px\] {
-  margin-left: 5px;
-}
-
-.mr-auto {
-  margin-right: auto;
-}
-
-.mb-\[10px\] {
-  margin-bottom: 10px;
-}
-
 .mt-\[-5px\] {
   margin-top: -5px;
 }
@@ -936,10 +924,6 @@ video {
 
 .mb-\[1em\] {
   margin-bottom: 1em;
-}
-
-.ml-\[-0\.5em\] {
-  margin-left: -0.5em;
 }
 
 .ml-\[3px\] {
@@ -1062,10 +1046,6 @@ video {
   height: 0.5em;
 }
 
-.h-\[1em\] {
-  height: 1em;
-}
-
 .h-\[80px\] {
   height: 80px;
 }
@@ -1088,10 +1068,6 @@ video {
 
 .h-4 {
   height: 1rem;
-}
-
-.h-12 {
-  height: 3rem;
 }
 
 .min-h-\[280px\] {
@@ -1166,16 +1142,20 @@ video {
   width: 25%;
 }
 
+.w-\[45px\] {
+  width: 45px;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
 .w-\[75\%\] {
   width: 75%;
 }
 
 .w-\[33\.33\%\] {
   width: 33.33%;
-}
-
-.w-\[45px\] {
-  width: 45px;
 }
 
 .w-\[25\%\] {
@@ -1186,16 +1166,8 @@ video {
   width: 48px;
 }
 
-.w-\[1em\] {
-  width: 1em;
-}
-
 .w-\[80px\] {
   width: 80px;
-}
-
-.w-1\/2 {
-  width: 50%;
 }
 
 .w-8 {
@@ -1210,10 +1182,6 @@ video {
   width: 1rem;
 }
 
-.w-6 {
-  width: 1.5rem;
-}
-
 .min-w-\[12rem\] {
   min-width: 12rem;
 }
@@ -1226,26 +1194,12 @@ video {
   flex: 1 1 0%;
 }
 
-.flex-shrink-0 {
-  flex-shrink: 0;
-}
-
 .table-auto {
   table-layout: auto;
 }
 
 .border-separate {
   border-collapse: separate;
-}
-
-.translate-y-4 {
-  --tw-translate-y: 1rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-0 {
-  --tw-translate-y: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .transform {
@@ -1396,6 +1350,10 @@ video {
   border-radius: 5px;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded-\[1em\] {
   border-radius: 1em;
 }
@@ -1404,16 +1362,12 @@ video {
   border-radius: 4px;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
 .rounded-sm {
   border-radius: 0.125rem;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .border {
@@ -1455,11 +1409,6 @@ video {
   border-color: rgb(230 230 230 / var(--tw-border-opacity));
 }
 
-.border-white-color {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
 .border-\[rgba\(82\2c 95\2c 129\2c 0\.09\)\] {
   border-color: rgba(82,95,129,0.09);
 }
@@ -1474,10 +1423,6 @@ video {
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
-.border-transparent {
-  border-color: transparent;
-}
-
 .border-b-primary-color {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(59 183 126 / var(--tw-border-opacity));
@@ -1486,11 +1431,6 @@ video {
 .border-r-primary-color {
   --tw-border-opacity: 1;
   border-right-color: rgb(59 183 126 / var(--tw-border-opacity));
-}
-
-.border-b-green-600 {
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(22 163 74 / var(--tw-border-opacity));
 }
 
 .bg-primary-color {
@@ -1531,6 +1471,11 @@ video {
   background-color: rgba(0, 0, 0, 0.7);
 }
 
+.bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
 .bg-white-color {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1541,9 +1486,9 @@ video {
   background-color: rgb(255 248 237 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#602053\] {
+.bg-\[\#d5d5d5\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(96 32 83 / var(--tw-bg-opacity));
+  background-color: rgb(213 213 213 / var(--tw-bg-opacity));
 }
 
 .bg-slate-100 {
@@ -1576,34 +1521,9 @@ video {
   background-color: rgb(17 205 239 / var(--tw-bg-opacity));
 }
 
-.bg-green-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 252 231 / var(--tw-bg-opacity));
-}
-
 .bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-}
-
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}
-
-.bg-red-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
-}
-
-.bg-gray-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
-
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-75 {
@@ -1638,10 +1558,6 @@ video {
 
 .bg-contain {
   background-size: contain;
-}
-
-.bg-clip-padding {
-  background-clip: padding-box;
 }
 
 .bg-center {
@@ -1788,11 +1704,6 @@ video {
   padding-bottom: 10px;
 }
 
-.px-\[10px\] {
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
 .py-\[15px\] {
   padding-top: 15px;
   padding-bottom: 15px;
@@ -1806,6 +1717,11 @@ video {
 .py-\[14px\] {
   padding-top: 14px;
   padding-bottom: 14px;
+}
+
+.px-\[10px\] {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .py-\[9px\] {
@@ -1874,6 +1790,10 @@ video {
   padding-right: 0.5rem;
 }
 
+.pt-5 {
+  padding-top: 1.25rem;
+}
+
 .pr-\[20px\] {
   padding-right: 20px;
 }
@@ -1916,10 +1836,6 @@ video {
 
 .pt-1 {
   padding-top: 0.25rem;
-}
-
-.pt-5 {
-  padding-top: 1.25rem;
 }
 
 .text-left {
@@ -2062,10 +1978,6 @@ video {
   font-size: 1.5rem;
 }
 
-.text-\[40px\] {
-  font-size: 40px;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -2092,10 +2004,6 @@ video {
 
 .font-\[700\] {
   font-weight: 700;
-}
-
-.font-normal {
-  font-weight: 400;
 }
 
 .uppercase {
@@ -2138,16 +2046,12 @@ video {
   line-height: 1.375;
 }
 
-.leading-\[48px\] {
-  line-height: 48px;
-}
-
 .leading-\[1\.3\] {
   line-height: 1.3;
 }
 
-.leading-6 {
-  line-height: 1.5rem;
+.leading-\[48px\] {
+  line-height: 48px;
 }
 
 .tracking-wider {
@@ -2222,16 +2126,6 @@ video {
   color: rgb(87 83 78 / var(--tw-text-opacity));
 }
 
-.text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
-.text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
 .text-green-600 {
   --tw-text-opacity: 1;
   color: rgb(22 163 74 / var(--tw-text-opacity));
@@ -2240,11 +2134,6 @@ video {
 .text-red-600 {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
-}
-
-.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .no-underline {
@@ -2269,14 +2158,6 @@ video {
 
 .opacity-70 {
   opacity: 0.7;
-}
-
-.opacity-0 {
-  opacity: 0;
-}
-
-.opacity-100 {
-  opacity: 1;
 }
 
 .shadow-custom-shadow-1 {
@@ -2327,16 +2208,16 @@ video {
   transition-duration: 150ms;
 }
 
-.transition {
-  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+.transition-opacity {
+  transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
 
-.transition-opacity {
-  transition-property: opacity;
+.transition {
+  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -2365,24 +2246,12 @@ video {
   transition-duration: 150ms;
 }
 
-.duration-300 {
-  transition-duration: 300ms;
-}
-
 .ease-linear {
   transition-timing-function: linear;
 }
 
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.ease-out {
-  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-}
-
-.ease-in {
-  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
 .banner__nav {
@@ -2393,6 +2262,104 @@ video {
 
 .shadow-product {
   box-shadow: 0px 1px 30px 0px rgb(36 38 43 / 10%);
+}
+
+/* Slider range */
+
+input[type=range] {
+  -webkit-appearance: none;
+  height: 0.5em;
+  pointer-events: none;
+  width: 100%;
+  border-radius: 1em;
+  background: none;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  border: 1px solid white;
+  border-radius:1em;
+  -webkit-appearance: none;
+  appearance: none;
+  pointer-events: auto;
+  background-color: #ffba43;
+  z-index: 2;
+}
+
+/* .range-min::-webkit-slider-thumb {
+  margin-left: -0.5em;
+} */
+
+/* animation text  */
+
+@-webkit-keyframes stagger {
+  0% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(-4px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes stagger {
+  0% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(-4px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.iq-button-effact {
+  --duration: 0.5s;
+  transition: transform var(--duration) ease;
+}
+
+.iq-button-effact:hover div span {
+  --duration: 0.5s;
+  display: inline-block;
+  -webkit-animation: stagger var(--duration)  linear var(--dur);
+          animation: stagger var(--duration)  linear var(--dur);
+}
+
+.iq-button-effact div span:nth-child(1){
+  --dur:0.05s;
+}
+
+.iq-button-effact div span:nth-child(2){
+  --dur:0.1s;
+}
+
+.iq-button-effact div span:nth-child(3){
+  --dur:0.2s;
+}
+
+.iq-button-effact div span:nth-child(4){
+  --dur:0.25s;
+}
+
+.iq-button-effact div span:nth-child(5){
+  --dur:0.3s;
+}
+
+.iq-button-effact div span:nth-child(6){
+  --dur:0.35s;
+}
+
+.iq-button-effact div span:nth-child(7){
+  --dur:0.4s;
 }
 
 .before\:absolute::before {
@@ -2426,19 +2393,9 @@ video {
   content: var(--tw-content);
 }
 
-.checked\:border-blue-600:checked {
-  --tw-border-opacity: 1;
-  border-color: rgb(37 99 235 / var(--tw-border-opacity));
-}
-
 .checked\:border-green-600:checked {
   --tw-border-opacity: 1;
   border-color: rgb(22 163 74 / var(--tw-border-opacity));
-}
-
-.checked\:bg-blue-600:checked {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 
 .checked\:bg-green-600:checked {
@@ -2490,16 +2447,6 @@ video {
   background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-red-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-gray-50:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
-
 .hover\:font-semibold:hover {
   font-weight: 600;
 }
@@ -2548,19 +2495,9 @@ video {
   border-color: rgb(59 183 126 / var(--tw-border-opacity));
 }
 
-.focus\:border-green-600:focus {
-  --tw-border-opacity: 1;
-  border-color: rgb(22 163 74 / var(--tw-border-opacity));
-}
-
 .focus\:bg-green-600:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(22 163 74 / var(--tw-bg-opacity));
-}
-
-.focus\:text-gray-700:focus {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .focus\:text-red-700:focus {
@@ -2581,26 +2518,6 @@ video {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:ring-2:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:ring-red-500:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-indigo-500:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-offset-2:focus {
-  --tw-ring-offset-width: 2px;
 }
 
 .active\:bg-green-700:active {
@@ -2625,104 +2542,12 @@ video {
 }
 
 @media (min-width: 576px) {
-  .sm\:my-8 {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-  }
-
-  .sm\:mx-0 {
-    margin-left: 0px;
-    margin-right: 0px;
-  }
-
-  .sm\:mt-0 {
-    margin-top: 0px;
-  }
-
-  .sm\:ml-4 {
-    margin-left: 1rem;
-  }
-
-  .sm\:ml-3 {
-    margin-left: 0.75rem;
-  }
-
-  .sm\:flex {
-    display: flex;
-  }
-
-  .sm\:h-10 {
-    height: 2.5rem;
-  }
-
-  .sm\:w-full {
-    width: 100%;
-  }
-
-  .sm\:w-10 {
-    width: 2.5rem;
-  }
-
-  .sm\:w-auto {
-    width: auto;
-  }
-
-  .sm\:max-w-lg {
-    max-width: 32rem;
-  }
-
-  .sm\:translate-y-0 {
-    --tw-translate-y: 0px;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .sm\:scale-95 {
-    --tw-scale-x: .95;
-    --tw-scale-y: .95;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .sm\:scale-100 {
-    --tw-scale-x: 1;
-    --tw-scale-y: 1;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .sm\:flex-row-reverse {
-    flex-direction: row-reverse;
-  }
-
-  .sm\:items-start {
-    align-items: flex-start;
-  }
-
   .sm\:items-center {
     align-items: center;
   }
 
   .sm\:p-0 {
     padding: 0px;
-  }
-
-  .sm\:p-6 {
-    padding: 1.5rem;
-  }
-
-  .sm\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
-  .sm\:pb-4 {
-    padding-bottom: 1rem;
-  }
-
-  .sm\:text-left {
-    text-align: left;
-  }
-
-  .sm\:text-sm {
-    font-size: .875rem;
   }
 }
 
@@ -2767,3 +2592,5 @@ video {
     justify-content: center;
   }
 }
+
+
